# tinyrpc

./: CMakeLists.txt  README.md
docs/images/: 系统架构图.drawio
example/: client.cpp  registry.cpp  server.cpp
proto/: calculator.proto  rpc_header.proto
src/: registry_client.cpp  registry_client.h  rpc_channel.cpp  rpc_channel.h  rpc_codec.cpp  rpc_codec.h  rpc_controller.cpp  rpc_controller.h  rpc_provider.cpp  rpc_provider.h  tcp_socket.cpp  tcp_socket.h  thread_pool.cpp  thread_pool.h
